--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,6 +1,11 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  background-color: #4B7399;
-  font-family: Verdana, Helvetica, Arial;
+  background-color: #fff;
+  font-family: Verdana, Helvetica, Arial, Sans;
   font-size: 14px;
 }
 
@@ -19,13 +24,61 @@ a {
 }
 
 #container {
-  width: 75%;
+  width: 747px;
   margin: 0 auto;
-  background-color: #FFF;
-  padding: 20px 40px;
-  border: solid 1px black;
   margin-top: 20px;
+  padding: 0;
 }
+
+#header {
+  /* background-color: #ef181e; */
+  background-image: url(../images/header.png);
+  color: #fff;
+  height: 153px;
+  width: 100%;
+  font-size: 1.1em;
+}
+#header #slogan {
+  padding: 50px 0 0 20px;
+}
+#header h1 {
+  font-variant: small-caps;
+  font-size: 1.8em;
+}
+
+#menu {
+  height: 39px;
+  background-image: url(../images/menu-bg.png);
+  font-variant: small-caps;
+  margin-top: 1px;
+}
+#menu ul {
+  padding-top: 8px;
+  padding-left: 20px;
+}
+#menu ul li {
+  display: inline;
+  margin-right: 15px;
+}
+#menu a, a:visited {
+  font-size: 1.1em;
+  color: #fff;
+  text-decoration: none;
+}
+
+#content {
+}
+#main {
+  padding: 20px 40px;
+  float: left;
+  width: 450px;
+}
+#sidebar {
+  float: right;
+  width: 179px;
+  background: #485057 url(../images/sidebar-corner.png) no-repeat top left;
+}
+
 
 #flash_notice, #flash_error {
   padding: 5px 8px;
@@ -81,6 +134,7 @@ a {
 }
 
 #footer {
+  clear: both;
   border-top: 1px solid grey;
   margin-top: 1em;
 }
@@ -89,3 +143,4 @@ a {
   color: grey;
   font-size: 0.8em;
 }
+
