--- a/app/views/protest/delivered.html.haml
+++ b/app/views/protest/delivered.html.haml
@@ -1,7 +1,11 @@
 - title "Protestbriefe verschickt!"
 
 %p
-  Vielen Dank. Die Protestmail wurde verschickt.
+  Danke für Deine Teilnahme! Dein Brief wurde gerade an Vattenfall verschickt.
+%p
+  Zur Bestätigung bekommst Du auch eine Kopie. Die anderen Empfänger sind:
+%ul
+  %li Tuomas Hataka (Vorstandsvorsitzer Vattenfall Europe AG)Vielen Dank.
 %p
   FIXME: Freunde informieren ...
 %p
