--- a/app/views/protest/verify.html.haml
+++ b/app/views/protest/verify.html.haml
@@ -1,9 +1,15 @@
 - title "Absender verfizieren"
 
 %p
-  Vielen Dank. Die E-Mail wurde gespeichert. Damit die Protestmail aber
-  and die Adressaten weitergeleitet werden kann, musst Du noch deine E-Mail-Adresse bestätigen.
+  Du erhälst in diesen Momenten eine Email zu Bestätigung der Emailadresse.
   %br/
-  Dazu hast Du jetzt eine E-Mail mit einem Bestätigungslink bekommen. Einfach dem Link
-  folgen und Deine Protestmail geht raus.
+  Bitte schau in Deinem Account nach und bestätige den Brief an Vattenfall, indem Du auf den Link klickst.
+%p
+  Damit der Protest gegen Vattenfall richtig wirkt, müssen wir viele Menschen sein.
+  Du kannst diese Online-Aktion weiterempfehlen, indem Du hier eine Email an Freunde und Bekannte schickst:
+  %br/
+  TODO: Tell a friend ..
+  %br/
+  Diese Emailadressen werden von uns nicht gespeichert, sondern dienen nur zum Verschicken der Empfehlung!
+  
   
