--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -1,9 +1,30 @@
 - title "Vattenfall sucks!"
 
-%p= link_to "Mitmachen!", :controller => 'protest'
+%p
+  Stopp Vattenfall: Klima-Killer vor Gericht – Klimaschützer freisprechen!
+  = link_to "Jetzt online Briefe an Vattenfall versenden!", :controller => 'protest'
 
-%p News
+%p
+  Der Energiekonzern Vattenfall plant in Hamburg-Moorburg ein neues
+  Steinkohlekraftwerk – einen wahren Klima-Killer. Mit Kraftwerk würde der
+  CO²-Ausstoß der Stadt Hamburg um 40 Prozent steigen und die umliegenden,
+  ohnehin sozial benachteiligten Stadtteile stark mit Abgasen belastet – mit
+  Rückendeckung des schwarz-grünen Hamburger Senats.
 
-%p Unterstützerinnen
+%p
+  Im Rahmen eines Klimacamps letzten Sommer besetzten 30 Klimaschützer kurzerhand
+  die Baustelle und hissten ein Banner „Stromkonzerne enteignen!“ Nun sorgt Vattenfall
+  dafür, dass diese Menschen vor Gericht gestellt werden und mit hohen Geldstrafen
+  belegt werden sollen.
 
-%p Hintergründe
+%p
+  Diese Ignoranz empört uns – wie auch zahlreiche andere Menschen.
+  Sie haben nachgefragt, wie sie ihre Solidarität mit den Angeklagten und
+  ihre Empörung über Vattenfall ausdrücken können. Dafür haben wir jetzt ein Mittel geschaffen:
+  Auf dieser Website könnt ihr Briefe an den Vattenfall-Vorstand schreiben und weitere Aktionen gegen den Klima-Killer ankündigen!
+
+%p
+  Zeigt eure Solidarität, schickt Protestbriefe an Vattenfall!
+
+%p
+  %b Klimaschützer freisprechen – Klima-Killer vor Gericht!
