--- a/public/stylesheets/sass/base.sass
+++ b/public/stylesheets/sass/base.sass
@@ -61,7 +61,13 @@ a
 #sidebar
   float: right
   width: 179px
-  background: #485057 url(../images/sidebar-corner.png) no-repeat top left
+  background: #fff url(../images/sidebar-corner.png) no-repeat top left
+  .inner
+    background: #485057 url(../images/sidebar-corner-bl.png) no-repeat bottom left
+    padding-bottom: 0.1em
+  .button
+    text-align: center
+    margin: 1em 0
 
 #main
   p
