--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -46,9 +46,9 @@ a {
   #menu ul {
     padding-top: 8px;
     padding-left: 20px; }
-    #menu ul li {
-      display: inline;
-      margin-right: 15px; }
+  #menu li {
+    display: inline;
+    margin-right: 15px; }
   #menu a, #menu a:visited {
     font-size: 1.1em;
     color: #fff;
@@ -59,6 +59,12 @@ a {
   padding: 20px 20px;
   float: left;
   width: 510px; }
+  #main p {
+    margin: 1em 0; }
+  #main ul {
+    margin-bottom: 1em; }
+  #main li {
+    margin-left: 2em; }
 
 #sidebar {
   float: right;
@@ -70,13 +76,6 @@ a {
   #sidebar .button {
     text-align: center;
     margin: 1em 0; }
-
-#main p {
-  margin: 1em 0; }
-#main ul {
-  margin-bottom: 1em; }
-  #main ul li {
-    margin-left: 2em; }
 
 #flash_notice, #flash_error {
   padding: 5px 8px;
@@ -131,3 +130,135 @@ a {
   color: grey;
   font-size: 0.8em; }
 
+.fieldWithErrors input {
+  background-color: #ff9f9f; }
+
+input.klein {
+  width: 50px;
+  margin: 0.5em 0 0 0px; }
+
+input.klein_red {
+  width: 50px;
+  margin: 0.5em 0 0 0px;
+  background-color: #FF9F9F; }
+
+input.mittel {
+  width: 105px;
+  margin: 0.5em 0 0 0px; }
+
+input.mittel_red {
+  width: 105px;
+  margin: 0.5em 0 0 0px;
+  background-color: #FF9F9F; }
+
+input.gross {
+  width: 160px;
+  margin: 0.5em 0 0 0px; }
+
+input.gross_red {
+  width: 160px;
+  background-color: #FF9F9F; }
+
+input.sehrgross {
+  width: 217px;
+  margin: 0.5em 0 0 0px; }
+
+input.sehrgross_red {
+  width: 217px;
+  margin: 0.5em 0 0 0px;
+  background-color: #FF9F9F; }
+
+#signer {
+  width: 450px;
+  margin: 0 auto; }
+  #signer form {
+    background-color: #F9F9F9;
+    padding: 10px 30px 10px 30px;
+    border: 1px;
+    border-style: solid;
+    border-color: #777777;
+    font-family: Helvetica,Arial,Verdana,"Sans Serif";
+    font-size: 10px;
+    line-height: 13px; }
+  #signer label {
+    width: 95px;
+    clear: both;
+    color: #625640;
+    float: left;
+    font-size: 13px;
+    line-height: 1.35em;
+    margin: 0.7em 0 0 0;
+    padding: 0 0.8em 0 0;
+    text-align: left; }
+  #signer h1 {
+    color: #625640;
+    font-size: medium;
+    margin: 0.5em 0; }
+  #signer p {
+    margin: 0em 0em 2em 0; }
+
+#newslettercheckbox {
+  margin-left: 104px;
+  margin-top: 15px;
+  width: 260px; }
+
+#newslettercheckbox p {
+  margin-left: 25px;
+  margin-top: -18px;
+  padding-left: 0;
+  color: #625640;
+  line-height: 1.35em;
+  padding-bottom: 0.5em;
+  text-align: left;
+  font-family: Helvetica,Arial,Verdana,"sans serif";
+  font-size: 1.3em; }
+
+#tellafriend {
+  color: #625640;
+  width: 340px;
+  margin: 0 auto;
+  background-color: #F9F9F9;
+  padding: 10px 30px 10px 30px;
+  border: 1px;
+  border-style: solid;
+  border-color: #777777;
+  font-family: Helvetica,Arial,Verdana,"Sans Serif";
+  font-size: 13px;
+  line-height: 13px; }
+  #tellafriend h1 {
+    font-size: medium;
+    margin: 0.5em 0; }
+  #tellafriend label {
+    width: 90px;
+    clear: both;
+    color: #625640;
+    float: left;
+    font-size: 13px;
+    line-height: 1.35em;
+    margin: 0.7em 0 0 0;
+    padding: 0 0.8em 0 0;
+    text-align: left; }
+  #tellafriend input {
+    color: #625640; }
+  #tellafriend p {
+    margin: 2em 0em 1em 0; }
+
+#tellafriend_submit {
+  margin: auto 0; }
+
+#small_decription {
+  font-size: 10px;
+  font-style: italic;
+  margin: 10px 20px 0px 0px; }
+
+.flash_box {
+  color: #000000;
+  margin: 10px 0px;
+  padding: 10px;
+  background-color: #FF9F9F;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #777777;
+  font-size: 14px;
+  text-align: center;
+  font-weight: bolder; }
