--- a/public/stylesheets/sass/base.sass
+++ b/public/stylesheets/sass/base.sass
@@ -45,9 +45,9 @@ a
   ul
     padding-top: 8px
     padding-left: 20px
-    li
-      display: inline
-      margin-right: 15px
+  li
+    display: inline
+    margin-right: 15px
   a, a:visited
     font-size: 1.1em
     color: #fff
@@ -58,6 +58,13 @@ a
   padding: 20px 20px
   float: left
   width: 510px
+  p
+    margin: 1em 0
+  ul
+    margin-bottom: 1em
+  li
+    margin-left: 2em
+
 #sidebar
   float: right
   width: 179px
@@ -68,14 +75,6 @@ a
   .button
     text-align: center
     margin: 1em 0
-
-#main
-  p
-    margin: 1em 0
-  ul
-    margin-bottom: 1em
-    li
-      margin-left: 2em
 
 #flash_notice, #flash_error
   padding: 5px 8px
@@ -129,4 +128,141 @@ a
 #footer a
   color: grey
   font-size: 0.8em
-}
+
+.fieldWithErrors input
+  background-color: #ff9f9f
+
+input.klein
+  width: 50px
+  margin: 0.5em 0 0 0px
+
+input.klein_red
+  width: 50px
+  margin: 0.5em 0 0 0px
+  background-color: #FF9F9F
+
+input.mittel
+  width: 105px
+  margin: 0.5em 0 0 0px
+
+input.mittel_red
+  width: 105px
+  margin: 0.5em 0 0 0px
+  background-color: #FF9F9F
+
+input.gross
+  width: 160px
+  margin: 0.5em 0 0 0px
+
+input.gross_red
+  width: 160px
+  margin:0.5em 0 0 0px
+  background-color: #FF9F9F
+
+input.sehrgross
+  width: 217px
+  margin: 0.5em 0 0 0px
+
+input.sehrgross_red
+  width: 217px
+  margin: 0.5em 0 0 0px
+  background-color: #FF9F9F
+
+#signer
+  width: 450px
+  margin: 0 auto
+  input
+    color:#625640
+  form
+    background-color: #F9F9F9
+    padding: 10px 30px 10px 30px
+    border: 1px
+    border-style: solid
+    border-color: #777777
+    font-family: Helvetica,Arial,Verdana,"Sans Serif"
+    font-size: 10px
+    line-height: 13px
+  label
+    width: 95px
+    clear: both
+    color: #625640
+    float: left
+    font-size: 13px
+    line-height: 1.35em
+    margin: 0.7em 0 0 0
+    padding: 0 0.8em 0 0
+    text-align: left
+  h1
+    color: #625640
+    font-size: medium
+    margin: 0.5em 0
+  p
+    margin: 0em 0em 2em 0
+
+#newslettercheckbox
+  margin-left: 104px
+  margin-top: 15px
+  width: 260px
+
+#newslettercheckbox p
+  margin-left: 25px
+  margin-top: -18px
+  padding-left: 0
+  color: #625640
+  line-height: 1.35em
+  padding-bottom: 0.5em
+  text-align: left
+  font-family: Helvetica,Arial,Verdana,"sans serif"
+  font-size: 1.3em
+
+#tellafriend
+  color: #625640
+  width: 340px
+  margin: 0 auto
+  background-color: #F9F9F9
+  padding: 10px 30px 10px 30px
+  border: 1px
+  border-style: solid
+  border-color: #777777
+  font-family: Helvetica,Arial,Verdana,"Sans Serif"
+  font-size: 13px
+  line-height: 13px
+  h1
+    font-size: medium
+    margin: 0.5em 0
+  label
+    width: 90px
+    clear: both
+    color: #625640
+    float: left
+    font-size: 13px
+    line-height: 1.35em
+    margin: 0.7em 0 0 0
+    padding: 0 0.8em 0 0
+    text-align: left
+  input
+    color: #625640
+  p
+    margin: 2em 0em 1em 0
+
+
+#tellafriend_submit
+  margin: auto 0
+
+
+#small_decription
+  font-size: 10px
+  font-style: italic
+  margin: 10px 20px 0px 0px
+
+.flash_box
+  color: #000000
+  margin: 10px 0px
+  padding: 10px
+  background-color: #FF9F9F
+  border-width: 1px
+  border-style: solid
+  border-color: #777777
+  font-size: 14px
+  text-align: center
+  font-weight: bolder
