Bertsch: Improved sidebar. Added some cool new icons, considering the corporate design..

--- a/public/stylesheets/sass/base.sass
+++ b/public/stylesheets/sass/base.sass
@@ -45,9 +45,9 @@ a
   ul
     padding-top: 8px
     padding-left: 20px
-  li
-    display: inline
-    margin-right: 15px
+    li
+      display: inline
+      margin-right: 15px
   a, a:visited
     font-size: 1.1em
     color: #fff
@@ -62,16 +62,17 @@ a
     margin: 1em 0
   ul
     margin-bottom: 1em
-  li
-    margin-left: 2em
+    li
+      margin-left: 2em
 
 #sidebar
   float: right
-  width: 179px
+  width: 154px
   background: #fff url(../images/sidebar-corner.png) no-repeat top left
   .inner
     background: #485057 url(../images/sidebar-corner-bl.png) no-repeat bottom left
-    padding-bottom: 0.1em
+    padding-top: 5px
+    padding-bottom: 20px
   .button
     text-align: center
     margin: 1em 0
