--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,13 +37,20 @@
         <div id="sidebar">
           <div class="inner">
             <div class="button">
-              <%= link_to image_tag("button_protest.gif"), {:controller => 'protest'}, :title => "Mitmachen" -%>
+              <%= link_to image_tag("symbol_mitmachen.png", :mouseover => "symbol_mitmachen_down.png"), {:controller => 'protest'}, :title => "Mitmachen" -%>
             </div>
             <div class="button">
-              <%= link_to image_tag("button_supported.gif"), {:controller => 'site', :action => "supported"}, :title => "Unterstützerinnen zeigen" -%>
+              <%= link_to image_tag("symbol_news.png", :mouseover => "symbol_news_down.png"), {:controller => 'site', :action => "news"}, :title => "aktuelle Neuigkeiten" -%>
             </div>
-            <div class="button"><%= image_tag("picto_trash.gif") -%></div>
-            <div class="button"><%= image_tag("picto_nocoal.gif") -%></div>
+            <div class="button">
+              <%= link_to image_tag("symbol_unterstuetzer.png", :mouseover => "symbol_unterstuetzer_down.png"), {:controller => 'site', :action => "supported"}, :title => "aktuelle Neuigkeiten" -%>
+            </div>
+            <div class="button">
+              <%= link_to image_tag("symbol_hintergrund.png", :mouseover => "symbol_hintergrund_down.png"), {:controller => 'site', :action => "story"}, :title => "aktuelle Neuigkeiten" -%>
+            </div>
+            <div class="button">
+              <%= link_to image_tag("symbol_materialien.png", :mouseover => "symbol_materialien_down.png"), {:controller => 'site', :action => "materials"}, :title => "aktuelle Neuigkeiten" -%>
+            </div>
           </div>
         </div>
       </div>
