--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -46,9 +46,9 @@ a {
   #menu ul {
     padding-top: 8px;
     padding-left: 20px; }
-  #menu li {
-    display: inline;
-    margin-right: 15px; }
+    #menu ul li {
+      display: inline;
+      margin-right: 15px; }
   #menu a, #menu a:visited {
     font-size: 1.1em;
     color: #fff;
@@ -63,16 +63,17 @@ a {
     margin: 1em 0; }
   #main ul {
     margin-bottom: 1em; }
-  #main li {
-    margin-left: 2em; }
+    #main ul li {
+      margin-left: 2em; }
 
 #sidebar {
   float: right;
-  width: 179px;
+  width: 154px;
   background: #fff url(../images/sidebar-corner.png) no-repeat top left; }
   #sidebar .inner {
     background: #485057 url(../images/sidebar-corner-bl.png) no-repeat bottom left;
-    padding-bottom: 0.1em; }
+    padding-top: 5px;
+    padding-bottom: 20px; }
   #sidebar .button {
     text-align: center;
     margin: 1em 0; }
