--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <head>
     <title><%= h(yield(:title) || "Vattenfall sucks!") %></title>
     <%= stylesheet_link_tag 'base' %>
+    <%= javascript_include_tag 'prototype' %>
     <%= yield(:head) %>
   </head>
   <body>
