--- a/public/stylesheets/sass/base.sass
+++ b/public/stylesheets/sass/base.sass
@@ -4,9 +4,8 @@
 
 body
   background-color: #fff
-  font-family: Verdana, Helvetica, Arial, Sans
+  font-family: Helvetica,Arial,Verdana,"Sans Serif"
   font-size: 14px
-
 a img
   border: none
 
@@ -58,12 +57,16 @@ a
   padding: 20px 20px
   float: left
   width: 510px
+  font-size: 13px
+  //line-height: 13px
   p
     margin: 1em 0
   ul
     margin-bottom: 1em
     li
       margin-left: 2em
+  a
+    color: #000
 
 #sidebar
   float: right
@@ -89,10 +92,8 @@ a
   background-color: #FCC
   border: solid 1px #C66
 
-.fieldWithErrors
-  display: inline
-
 #errorExplanation
+  margin: auto
   width: 400px
   border: 2px solid #CF0000
   padding: 0px
@@ -130,8 +131,10 @@ a
   color: grey
   font-size: 0.8em
 
-.fieldWithErrors input
-  background-color: #ff9f9f
+.fieldWithErrors
+  display: inline
+  input
+    background-color: #ff9f9f
 
 input.klein
   width: 50px
@@ -267,3 +270,20 @@ input.sehrgross_red
   font-size: 14px
   text-align: center
   font-weight: bolder
+
+.form
+  background-color: #F9F9F9
+  border: 1px solid #777777
+  padding: 0 1em 1em
+  h3
+    margin-top: 1em
+.group
+  margin: 0.7em 0
+.left
+  float: left
+  width: 20%
+.right
+  float: right
+  width: 75%
+.clear
+  clear: both
