--- a/public/stylesheets/sass/base.sass
+++ b/public/stylesheets/sass/base.sass
@@ -80,6 +80,50 @@ a
     text-align: center
     margin: 1em 0
 
+#footer
+  clear: both
+  border-top: 1px solid grey
+  margin-top: 1em
+
+#footer a
+  color: grey
+  font-size: 0.8em
+
+
+#small_decription
+  font-size: 10px
+  font-style: italic
+  margin: 10px 20px 0px 0px
+
+.flash_box
+  color: #000000
+  margin: 10px 0px
+  padding: 10px
+  background-color: #FF9F9F
+  border-width: 1px
+  border-style: solid
+  border-color: #777777
+  font-size: 14px
+  text-align: center
+  font-weight: bolder
+
+.form
+  background-color: #F9F9F9
+  border: 1px solid #777777
+  padding: 0 3em 1em 3em
+  h3
+    margin-top: 1em
+.group
+  margin: 0.5em 0
+.left
+  float: left
+  width: 20%
+.right
+  float: right
+  width: 75%
+.clear
+  clear: both
+
 #flash_notice, #flash_error
   padding: 5px 8px
   margin: 10px 0
@@ -91,6 +135,11 @@ a
 #flash_error
   background-color: #FCC
   border: solid 1px #C66
+
+.fieldWithErrors
+  display: inline
+  input
+    background-color: #ff9f9f
 
 #errorExplanation
   margin: auto
@@ -121,169 +170,3 @@ a
 #errorExplanation ul li
   font-size: 12px
   list-style: disc
-
-#footer
-  clear: both
-  border-top: 1px solid grey
-  margin-top: 1em
-
-#footer a
-  color: grey
-  font-size: 0.8em
-
-.fieldWithErrors
-  display: inline
-  input
-    background-color: #ff9f9f
-
-input.klein
-  width: 50px
-  margin: 0.5em 0 0 0px
-
-input.klein_red
-  width: 50px
-  margin: 0.5em 0 0 0px
-  background-color: #FF9F9F
-
-input.mittel
-  width: 105px
-  margin: 0.5em 0 0 0px
-
-input.mittel_red
-  width: 105px
-  margin: 0.5em 0 0 0px
-  background-color: #FF9F9F
-
-input.gross
-  width: 160px
-  margin: 0.5em 0 0 0px
-
-input.gross_red
-  width: 160px
-  margin:0.5em 0 0 0px
-  background-color: #FF9F9F
-
-input.sehrgross
-  width: 217px
-  margin: 0.5em 0 0 0px
-
-input.sehrgross_red
-  width: 217px
-  margin: 0.5em 0 0 0px
-  background-color: #FF9F9F
-
-#signer
-  width: 450px
-  margin: 0 auto
-  input
-    color:#625640
-  form
-    background-color: #F9F9F9
-    padding: 10px 30px 10px 30px
-    border: 1px
-    border-style: solid
-    border-color: #777777
-    font-family: Helvetica,Arial,Verdana,"Sans Serif"
-    font-size: 10px
-    line-height: 13px
-  label
-    width: 95px
-    clear: both
-    color: #625640
-    float: left
-    font-size: 13px
-    line-height: 1.35em
-    margin: 0.7em 0 0 0
-    padding: 0 0.8em 0 0
-    text-align: left
-  h1
-    color: #625640
-    font-size: medium
-    margin: 0.5em 0
-  p
-    margin: 0em 0em 2em 0
-
-#newslettercheckbox
-  margin-left: 104px
-  margin-top: 15px
-  width: 260px
-
-#newslettercheckbox p
-  margin-left: 25px
-  margin-top: -18px
-  padding-left: 0
-  color: #625640
-  line-height: 1.35em
-  padding-bottom: 0.5em
-  text-align: left
-  font-family: Helvetica,Arial,Verdana,"sans serif"
-  font-size: 1.3em
-
-#tellafriend
-  color: #625640
-  width: 340px
-  margin: 0 auto
-  background-color: #F9F9F9
-  padding: 10px 30px 10px 30px
-  border: 1px
-  border-style: solid
-  border-color: #777777
-  font-family: Helvetica,Arial,Verdana,"Sans Serif"
-  font-size: 13px
-  line-height: 13px
-  h1
-    font-size: medium
-    margin: 0.5em 0
-  label
-    width: 90px
-    clear: both
-    color: #625640
-    float: left
-    font-size: 13px
-    line-height: 1.35em
-    margin: 0.7em 0 0 0
-    padding: 0 0.8em 0 0
-    text-align: left
-  input
-    color: #625640
-  p
-    margin: 2em 0em 1em 0
-
-
-#tellafriend_submit
-  margin: auto 0
-
-
-#small_decription
-  font-size: 10px
-  font-style: italic
-  margin: 10px 20px 0px 0px
-
-.flash_box
-  color: #000000
-  margin: 10px 0px
-  padding: 10px
-  background-color: #FF9F9F
-  border-width: 1px
-  border-style: solid
-  border-color: #777777
-  font-size: 14px
-  text-align: center
-  font-weight: bolder
-
-.form
-  background-color: #F9F9F9
-  border: 1px solid #777777
-  padding: 0 1em 1em
-  h3
-    margin-top: 1em
-.group
-  margin: 0.7em 0
-.left
-  float: left
-  width: 20%
-.right
-  float: right
-  width: 75%
-.clear
-  clear: both
