--- a/public/stylesheets/sass/base.sass
+++ b/public/stylesheets/sass/base.sass
@@ -30,11 +30,14 @@ a
   height: 153px
   width: 100%
   font-size: 1.1em
-#header #slogan
-  padding: 50px 0 0 20px
-#header h1
-  font-variant: small-caps
-  font-size: 1.8em
+  #slogan
+    padding: 50px 0 0 20px
+  h1
+    font-variant: small-caps
+    font-size: 1.8em
+    a
+      color: #fff
+      text-decoration: none
 
 #menu
   height: 39px
@@ -84,10 +87,14 @@ a
   clear: both
   border-top: 1px solid grey
   margin-top: 1em
-
-#footer a
-  color: grey
-  font-size: 0.8em
+  text-align: center
+  ul
+    li
+      display: inline
+      margin-right: 15px
+      a
+        color: grey
+        font-size: 0.8em
 
 
 #small_decription
